# cuMNIST

./: CMakeLists.txt  LICENSE  how.txt  main.cpp
model/: dense_bias_0.npy  dense_bias_1.npy  dense_bias_2.npy  dense_kernel_1.npy  dense_kernel_2.npy
ops/: ReLU.cu  SoftMax.cu  add.cu  conv2d.cu  copyin.cu  copyin.cuh  copyout.cu  matmul.cu  ops.cuh  optional_ops.h
ops/optional_ops/: ReLU.cu  ReLU.cuh  SoftMax.cu  SoftMax.cuh  add.cu  add.cuh  conv2d.cuh  matmul.cu  matmul.cuh
script/: save_data.py  train.py  transfer_test.py
src/: graph.cpp  manbo.hpp  scheduler.cpp
